how to align values or use display table to fix heights and widths, using display flex to automatically asign a height without having to go with that

--- a/Header1/style.css
+++ b/Header1/style.css
@@ -19,25 +19,36 @@ header{
     color: #fff;
  background-color: #0072b0;
  border-radius: .5em;
-
+    padding-top: 4em;
+    padding-bottom: 4em;
 }
 
 main{
     display: block;
 }
 
+.wrapper{
+    margin-left: -1.5em;
+    margin-right: -1.5em;
+}
+
+.container{
+    /* display: table;
+    width: 100%;
+    border-spacing: 1.5em 0;  */
+    display: flex;
+}
+
 .main{
-    box-sizing: border-box;
- float: left;
+/* display: table-cell; */
  width: 70%;
  background-color: #fff;
  border-radius: .5em;
 }
 
 .sidebar{
-    box-sizing: border-box;
-    float: left;
-    width: calc(30% - 1.5em);
+    /* display: table-cell; */
+    width: 30%;
     margin-left: 1.5em;
     padding: 1.5em;
     background-color: #fff;
